# zkevm-circuits

./: Cargo.toml
bus-mapping/: Cargo.toml
bus-mapping/src/: circuit_input_builder.rs  error.rs  exec_trace.rs  operation.rs  precompile.rs  state_db.rs
bus-mapping/src/circuit_input_builder/: access.rs  call.rs  execution.rs  transaction.rs
bus-mapping/src/evm/opcodes/: begin_end_tx.rs
eth-types/: Cargo.toml
eth-types/src/: geth_types.rs
gadgets/: Cargo.toml
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: bytecode_circuit.rs  copy_circuit.rs  evm_circuit.rs  keccak_circuit.rs  pi_circuit.rs  root_circuit.rs  state_circuit.rs  super_circuit.rs  table.rs
zkevm-circuits/src/evm_circuit/: execution.rs  param.rs  step.rs  table.rs  util.rs
zkevm-circuits/src/evm_circuit/execution/: begin_tx.rs  mulmod.rs
zkevm-circuits/src/evm_circuit/util/: instrumentation.rs
zkevm-circuits/src/keccak_circuit/: keccak_packed_multi.rs  table.rs
zkevm-circuits/src/root_circuit/: aggregation.rs  dev.rs  test.rs
zkevm-circuits/src/state_circuit/: dev.rs  lexicographic_ordering.rs  lookups.rs  multiple_precision_integer.rs
zkevm-circuits/src/table/: tx_table.rs
zkevm-circuits/src/tx_circuit/: sign_verify.rs
zkevm-circuits/src/util/: cell_placement_strategy.rs
zkevm-circuits/src/witness/: block.rs  mpt.rs  rw.rs
