[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
halo2_proofs = { path="../../halo2/halo2_proofs", features=["dev-graph", "circuit-params"]}
# halo2_proofs = { path="../../halo2-axiom/halo2_proofs", features=["dev-graph", "circuit-params"]}
sha3 = "0.7.2"
eth-types = { path = "../eth-types" }
digest = "0.7.6"
strum = "0.24"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
